// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryBadge renders advocacia as default correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #5A8DED;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#5A8DED"
  >
    Advocacia
  </p>
</div>
`;

exports[`CategoryBadge renders enfermagem case correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #F778C1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#F778C1"
  >
    Enfermagem
  </p>
</div>
`;

exports[`CategoryBadge renders fisioterapia case correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #ED985A;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#ED985A"
  >
    Fisioterapia
  </p>
</div>
`;

exports[`CategoryBadge renders fonoaudiologia case correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #7C65DE;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#7C65DE"
  >
    Fonoaudiologia
  </p>
</div>
`;

exports[`CategoryBadge renders medicine correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #2AC390;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#2AC390"
  >
    Medicina
  </p>
</div>
`;

exports[`CategoryBadge renders nutrição case correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #A0C32A;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#A0C32A"
  >
    Nutrição
  </p>
</div>
`;

exports[`CategoryBadge renders odontologia case correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #51CECE;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#51CECE"
  >
    Odontologia
  </p>
</div>
`;

exports[`CategoryBadge renders pessoa cuidadora correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #5A8DED;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#5A8DED"
  >
    Pessoa Cuidadora
  </p>
</div>
`;

exports[`CategoryBadge renders psicologia case correctly 1`] = `
.c0 {
  margin-right: 1em;
  color: #fff;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  max-width: 70%;
  font-size: 1.4em;
  font-weight: 600;
  padding: 0.2em 2em;
  border-radius: 1.5em;
  line-height: 1.8em;
  background-color: #A97FE2;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-bottom: 1.5em;
}

<div>
  <p
    class="c0"
    color="#A97FE2"
  >
    Psicologia
  </p>
</div>
`;
